--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -312,7 +312,7 @@
                                 <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
                             </div>
                             <div class="inner_content_btn total_btn">
-                                <a (click)="totalCost('slide_four')" class="text-white float-left text-center">Total</a>
+                                <a class="text-white float-left text-center">Total</a>
                                 <a class="text-white float-right text-center">GuestList</a>
                             </div>
                             <h3 class="number text-white text-center" *ngIf="totalCollection">
@@ -362,7 +362,7 @@
                                 <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
                             </div>
                             <div class="inner_content_btn total_btn">
-                                <a (click)="totalCost('slide_four')" class="text-white float-left text-center">Total</a>
+                                <a class="text-white float-left text-center">Total</a>
                                 <a class="text-white float-right text-center">GuestList</a>
                             </div>
                             <h3 class="number text-white text-center"><a><img src="/assets/images/search.png"></a><a><img
