--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <!-- New Design Integreat -->
-<div id="loading" *ngIf="isDiable">
+<div id="loading" *ngIf="isDisable">
     <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
 </div>
 
 
-<section class="enter_section d-flex flex-wrap align-content-center" *ngIf="!isDiable">
+<section class="enter_section d-flex flex-wrap align-content-center" >
 	<div class="container-fluid">
 		<h3 class="text-center">Aso Ebi</h3>
 		<div class="enter_screen_sec">
