--- a/src/app/my-event/my-event.component.html
+++ b/src/app/my-event/my-event.component.html
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="noMessage" *ngIf="myEvent.length == 0">
+                <div class="noMessage">
                     <h1>Sorry you have no events, <a routerLink="/createEvent"> Create new Event </a> for more details.
                     </h1>
                 </div>
