--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -20,7 +20,7 @@
         </div>
     </section>
 </div>
-<div *ngIf="!isDiable">
+<div *ngIf="!isDisable">
     <div class=" custom_steps firstStep" style="display:none">
         <section class="join_page2_section d-flex flex-wrap align-content-center">
             <div class="container-fluid">
